Add gitlog to refactoring doc

--- a/refactoring.tex
+++ b/refactoring.tex
@@ -9,6 +9,7 @@
 \usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{setspace}
+\usepackage{tabularx}
 \onehalfspacing
 \usepackage[
   colorlinks=true,
@@ -462,8 +463,7 @@ The following files were changed as a result of this refactoring:
   \item \href{https://github.com/awave1/assessment-loan-system/commit/ad3147#diff-e9112217dc53d4fe93d129cbb49f81e7}{src/main/java/com/keirnellyer/glencaldy/manipulation/user/UserProperties.java}
 \end{itemize}
 
-% 5.How was the code tested?
-
-% 6.Why is the code better structured after the refactoring? Does the result of the refactoring suggest or enable further refactorings?
+\section*{Git Log}
+\input{log.tex}
 
 \end{document}
