--- a/log.tex
+++ b/log.tex
@@ -5,28 +5,29 @@
 \href{https://github.com/awave1/assessment-loan-system/commit/aef6c56b44100119cbf74f7b0781316c9ec98bd0}{aef6c56} & Artem Golovin & Refactor runtime package, replace some methods by method calls from UserRepository\\ \hline
 \href{https://github.com/awave1/assessment-loan-system/commit/b6b0c982f35695c9f9bb0eea222788ba911f6f26}{b6b0c98} & Artem Golovin & Refactor menu.option, extract UserTypeOption to separate class, introduce UserType enum, modify accessors\\ \hline
 \href{https://github.com/awave1/assessment-loan-system/commit/8a898a0ca9406ffb32fb65c40485973b1f50e97a}{8a898a0} & Artem Golovin & Extract and rename StockItemOption class, add StockItemType enum\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/84345f2013f6befd05186da0599a2787aa693b5a}{84345f2} & awave1 & Eliminate redundancies and remove some dead code\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/a9423d7bc8b4dfe8d692af76560d1a34878f985c}{a9423d7} & awave1 & Extract various user information into UserInfo class, remove some dead code\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/fcaddaa808bff70b463e9c852aa1653040a01ab8}{fcaddaa} & awave1 & Use UserInfo to shorten constructor args\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/8fb88595a52dbac288d6425c3187bca65bd16a88}{8fb8859} & awave1 & Add tests for Adminitstrative class and implement equals for UserInfo\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/63a99b1b447cdd0381bb1db428e05bcdcd7859ad}{63a99b1} & awave1 & Extract build menu method into Menu\#buildFor\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/8a30b154c6545dde2ab95a9f2c91f72e06910953}{8a30b15} & awave1 & Replace for loop with stream api\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/ad3147c13281bdfa24cbdba143867c95cdd55d1f}{ad3147c} & awave1 & add abstract processInput\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/bdee853e6e00b86b70686100d6affeb4c5e53a4b}{bdee853} & awave1 & Invert boolean method\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/23f6ddaf5e3335cb94619026282a5b682db98586}{23f6dda} & awave1 & Modify access\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/90a01a3f7f0fdd2e2135b16318e624eea0bfbd64}{90a01a3} & awave1 & Extract SelectItem class and remove dead code\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/bd538f05a6fbff8283b397c9a265040ab082542d}{bd538f0} & Artem Golovin & Add ConsoleInput to abstract do{} while polling\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/2534ae1e8b711ad62fca8e783b861151951a8f02}{2534ae1} & Artem Golovin & Use Visitor pattern to eliminate instanceof checks in menu\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/a7ecb285443ab25bb15ea940ba888ca3d7cc5e8d}{a7ecb28} & Artem Golovin & Add README.md\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/545e64c6fa7258fd3c76e5644bdeac9424c8ed8c}{545e64c} & Artem Golovin & Add gradle run task and update README.md\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/57c98855efe469e298c817cadc8d93f591cabf1a}{57c9885} & Artem Golovin & Add refactoring doc\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/f50faa890a5b87f64f8034649d3f740feecbcdbc}{f50faa8} & Artem Golovin & Add ConsoleInputTest\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/d69e941c0d7b9494f5b554c5c8f4dc3ef35b15df}{d69e941} & Artem Golovin & Add more tests for ConsoleInput\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/1b23d1ae9d15f13ed7fcde87981b15304efd5828}{1b23d1a} & Artem Golovin & add stubs for the rest of refactorings\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/41cdb7ab509e211045f1ca0a6833fd9d63b7f080}{41cdb7a} & Artem Golovin & Add notes about Visitor pattern\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/e98f22b6e76694db631b930e29440f1af8a095e6}{e98f22b} & Artem Golovin & Add MenuVisitor tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/50b6aabb711f6b0e131d486def424fd362f43fc6}{50b6aab} & Artem Golovin & Add test info about `MenuVisitor`\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/739ac5380277b0c72d2a0fd6254aba5f6bffaade}{739ac53} & Artem Golovin & Add notes about UserInfo refactor\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/799c0f87e615a6c5ac3d5cec3c60c9cd95ccd4bd}{799c0f8} & Artem Golovin & Add more refactoring notes\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/aa43c5c5d03930bdb6b1abbb49146646f9c70110}{aa43c5c} & Artem Golovin & update the notes\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/f9dce8df807e66be235470e3b729dadba625db99}{f9dce8d} & Artem Golovin & Eliminate redundancies and remove some dead code\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/4b13d98a4d8992145c4e31197e92a4c8ff3a358d}{4b13d98} & Artem Golovin & Extract various user information into UserInfo class, remove some dead code\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/6f50e7e117fdaed88d909634a06482e2ce707c13}{6f50e7e} & Artem Golovin & Use UserInfo to shorten constructor args\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/4e2521bdd5dcea1574b0d366cd50967f7d4784f8}{4e2521b} & Artem Golovin & Add tests for Adminitstrative class and implement equals for UserInfo\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/49b5bd194a4906675a3ec4213401daf093d152db}{49b5bd1} & Artem Golovin & Extract build menu method into Menu\#buildFor\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/af66d60295e68510a7d5a597509daabed9a9a6a3}{af66d60} & Artem Golovin & Replace for loop with stream api\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/0855bbf763af1780143fc5698bd023aceb0b46d9}{0855bbf} & Artem Golovin & add abstract processInput\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/4eae9e8d9aa09cc9d18a701fd9ab9354fb2c567f}{4eae9e8} & Artem Golovin & Invert boolean method\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/1f6012cf223f64422902935b22f89e290e3931fd}{1f6012c} & Artem Golovin & Modify access\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/a50be52ea770d0b4033bfabd054b7b0f72183d3c}{a50be52} & Artem Golovin & Extract SelectItem class and remove dead code\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/25eee6928012caecd2e4cf1285de2094833e84ad}{25eee69} & Artem Golovin & Add ConsoleInput to abstract do{} while polling\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/d20ab8d065d243a1339a54cc70d27693d68a7333}{d20ab8d} & Artem Golovin & Use Visitor pattern to eliminate instanceof checks in menu\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/f20dd17d79457a325b8c43ad1145364618729e4b}{f20dd17} & Artem Golovin & Add README.md\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/2f3303dd8f9a9e26db7d276d1bb89d52bbfbef20}{2f3303d} & Artem Golovin & Add gradle run task and update README.md\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/435b036d99e31e858ae1bc044045a16a4b518636}{435b036} & Artem Golovin & Add refactoring doc\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/6143e70ec851a43581eb145225377be4dff4fa60}{6143e70} & Artem Golovin & Add ConsoleInputTest\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/27634dd874fcfc9cd666da4c28bf96386cb84894}{27634dd} & Artem Golovin & Add more tests for ConsoleInput\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/75455df242845e02ef7c6839e84ef77eaa3eca45}{75455df} & Artem Golovin & add stubs for the rest of refactorings\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/a54efe2612111bb5b273db3377973cb740a51d55}{a54efe2} & Artem Golovin & Add notes about Visitor pattern\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/886a2605f749282f45e9ef8c3c4cbe1762a68799}{886a260} & Artem Golovin & Add MenuVisitor tests\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/490553677b59d77926ab6a3eee321a2cc350be1f}{4905536} & Artem Golovin & Add test info about `MenuVisitor`\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/04bb12ca11d0e76f57607a9481ea5954787117b0}{04bb12c} & Artem Golovin & Add notes about UserInfo refactor\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/f630057ca876e3222e614dc4797ef0cf1399c42d}{f630057} & Artem Golovin & Add more refactoring notes\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/7d211c8d1556f10a63d8a0dcc3697ce279695a29}{7d211c8} & Artem Golovin & update the notes\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/f32e14bad9c46a5fedc7f3564c868cbc29ee74f2}{f32e14b} & Artem Golovin & Add gitlog to refactoring doc\\ \hline
 \end{tabularx}
