--- a/refactoring.tex
+++ b/refactoring.tex
@@ -9,7 +9,11 @@
 \usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{setspace}
-\usepackage{tabularx}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+
+\usepackage{ltablex}
+
 \onehalfspacing
 \usepackage[
   colorlinks=true,
