--- a/log.tex
+++ b/log.tex
@@ -30,4 +30,5 @@
 \href{https://github.com/awave1/assessment-loan-system/commit/f630057ca876e3222e614dc4797ef0cf1399c42d}{f630057} & Artem Golovin & Add more refactoring notes\\ \hline
 \href{https://github.com/awave1/assessment-loan-system/commit/7d211c8d1556f10a63d8a0dcc3697ce279695a29}{7d211c8} & Artem Golovin & update the notes\\ \hline
 \href{https://github.com/awave1/assessment-loan-system/commit/f32e14bad9c46a5fedc7f3564c868cbc29ee74f2}{f32e14b} & Artem Golovin & Add gitlog to refactoring doc\\ \hline
+\href{https://github.com/awave1/assessment-loan-system/commit/7bef42a766618e5eda54960d929c7182e1cacbe4}{7bef42a} & Artem Golovin & replace commiter author to be my name instead of my github username\\ \hline
 \end{tabularx}
