--- a/refactoring.tex
+++ b/refactoring.tex
@@ -76,6 +76,8 @@ The project that was refactored for this assignment is \href{https://github.com/
 
 Original project did not include any README or instructions how to get up and running with the project, therefore I included \href{https://github.com/awave1/assessment-loan-system/blob/refactor/README.md}{README}, describing the steps necessary to build, run, and test the code. To make it easier to manage dependencies and to build the project, I added support for \href{https://gradle.org/}{gradle}.
 
+The project can also be found on \href{https://gitlab.cpsc.ucalgary.ca/artem.golovin/assessment-loan-system}{gitlab.cpsc.ucalgary.ca/artem.golovin/assessment-loan-system}.
+
   \subsection*{Refactoring structure}
 
   The refactorings that were made in the project, can be categorized into three categories: \b{minor}, \b{medium} and \b{major}. \b{Minor} refactorings were usually made together with \b{major} and \b{minor} refactorings, thus no commits were directly dedicated to \b{minor} refactorings.
